fixing null and chat overflow.

--- a/frontend/newClient/src/app/pages/room/chat-box/chat-box.component.scss
+++ b/frontend/newClient/src/app/pages/room/chat-box/chat-box.component.scss
@@ -67,7 +67,7 @@
     overflow-y: auto;
     overflow-x: auto;
     width: calc(100% - 28px);
-    height: calc(100% - 55px);
+    height: calc(100% - 75px);
     margin-top: 7px;
     font-family: cursive;
     font-size: 12px;
